--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,8 +6,8 @@
 .footer-section{
     width: 100%;
     height: auto;
-    background-color: rgb(54, 203, 240);
-    padding: 10px 0px;
+    background-color: #F0F0F0;
+    padding: 20px 0px;
 }
 
 .footer-div{
