--- a/src/Components/ComplainAndDisplay/Header/Header.css
+++ b/src/Components/ComplainAndDisplay/Header/Header.css
@@ -5,69 +5,62 @@
 
 .header-section{
     width: 100%;
-    height: 60px;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: rgb(54, 203, 240);
+    background-color: #F0F0F0;
     position: fixed;
     z-index: 1;
 }
 
 .header-div{
     width: 80%;
-    height: 50px;
-    border-radius: 5px;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 10px;
-    background-color: rgb(54, 203, 240);
 }
 
 .header-user h5{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 14px;
     color: black;
 }
 
 .header-user span{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
 }
 
 .header-nav button{
-    height: 40px;
     border: none;
-    background-color: rgb(54, 203, 240);
-    text-transform: uppercase;
+    padding: 10px 20px;
+    background-color: #F0F0F0;
     font-family: 'Times New Roman', Times, serif;
-    font-weight: 400;
     font-size: 16px
 }
 
 .header-navButton{
-    margin: 0px 10px;
-    padding: 0px 25px;
+    cursor: pointer;
 }
 
 .header-navButton:hover{
-    border-radius: 5px;
-    background-color: #fff;
+    background-color: orange;
+    color: #fff;
 }
 
-.logoutButton button{
-    height: 40px;
-    padding: 0px 35px;
-    color: rgb(54, 54, 54);
-    background-color: rgb(250, 252, 252);
-    border-radius: 5px;
+.logoutButton{
+    cursor: pointer;
+    padding: 10px 50px;
+    color: #fff;
+    background-color: orange !important;
     font-size: 15px;
 }
 
-.logoutButton button:hover{
-    background-color: black;
-    color: #fff;
+.logoutButton:hover{
+    background-color: rgb(233, 158, 20) !important;
+    transition-duration: 1s;
 }
