--- a/src/Components/AddStaff/AddStaff.css
+++ b/src/Components/AddStaff/AddStaff.css
@@ -13,6 +13,36 @@
     justify-content: center;
 }
 
+.addStaff-displayButton{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 30px 0px;
+}
+
+.addStaff-displayButton button{
+    padding: 10px 50px;
+    border: none;
+    background-color: orange;
+    font-size: 14px;
+    cursor: pointer;
+    color: white;
+}
+
+.addStaff-displayButton button:hover{
+    background-color: rgb(230, 164, 43);
+    transition-duration: 1s;
+}
+
+.addStaff-body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .addStaff-header h5{
     font-family: 'Times New Roman', Times, serif;
     font-size: 22px;
