--- a/src/Components/NewComplains/NewComplains.css
+++ b/src/Components/NewComplains/NewComplains.css
@@ -3,26 +3,38 @@
     padding: 0;
 }
 
-.displayComplain-section{
+.newComplain-section{
     width: 100%;
     height: auto;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.displayComplain-header h5{
+.newComplain-header h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
-    color: rgb(70, 69, 69);
-    margin: 60px 0px 30px 0px;
 }
 
-.displayComplain-content{
+.newComplain-content{
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
     display: grid;
     grid: auto/auto auto auto;
     gap: 10px;
-    margin: 0px 150px;
+    justify-content: center;
     margin-bottom: 30px;
+}
+
+.newComplainCard-button{
+    display: flex;
+}
+
+.newComplainCardButton{
+    display: none;
+    border: none;
+    background-color: orange;
 }
