--- a/src/Components/NewComplains/NewComplains.css
+++ b/src/Components/NewComplains/NewComplains.css
@@ -87,3 +87,9 @@
     border: 1px solid rgb(44, 44, 228);
     color: rgb(44, 44, 228);
 }
+
+.statusButton{
+    border: none;
+    background-color: orange;
+    
+}
