--- a/src/Components/ComplainAndDisplay/Header/Header.css
+++ b/src/Components/ComplainAndDisplay/Header/Header.css
@@ -4,20 +4,41 @@
 }
 
 .header-section{
+    background-image: url("../../../image/display//coverBG2.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.overlyColor{
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.7;
+    position: absolute;
+}
+
+.headerContent{
+    z-index: 1;
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #F0F0F0;
-    position: fixed;
-    z-index: 1;
 }
 
 .header-div{
     width: 80%;
-    height: auto;
+    height: 60px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -27,7 +48,7 @@
 .header-user h5{
     font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
-    color: black;
+    color: #fff;
 }
 
 .header-user span{
@@ -38,9 +59,10 @@
 .header-nav button{
     border: none;
     padding: 10px 20px;
-    background-color: #F0F0F0;
+    background-color: transparent;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 16px
+    font-size: 16px;
+    color: #fff;
 }
 
 .header-navButton{
@@ -63,4 +85,25 @@
 .logoutButton:hover{
     background-color: rgb(233, 158, 20) !important;
     transition-duration: 1s;
+}
+
+.pageTitleCover{
+    width: 100%;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: #fff;
+}
+
+.pageTitleCover h1{
+    margin-top: -30px;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+.pageTitleCover p{
+    font-size: 20px;
 }
