--- a/src/Components/UserQuery/UserQuery.css
+++ b/src/Components/UserQuery/UserQuery.css
@@ -5,7 +5,7 @@
 
 .userQuery-section{
     width: 100%;
-    height: 500px;
+    height: auto;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
