--- a/src/Components/Lists/List.css
+++ b/src/Components/Lists/List.css
@@ -1,6 +1,10 @@
+@import url('https://fonts-googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .list-section{
@@ -36,7 +40,8 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    margin-top: 50px;
 }
 
 .card-body{
@@ -90,4 +95,133 @@
 .cardBody-right h6{
     align-items: center;
     font-size: 18px;
+}
+
+
+
+/* temp card */
+
+.card{
+    width: 350px;
+    /* height: 450px; */
+    height: 190px;
+    background-color: gray;
+    border-radius: 20px;
+    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+    transition: 0.5s;
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.card:hover{
+    height: 450px;
+}
+
+.imgBox{
+    position: absolute;
+    left: 50%;
+    top: -50px;
+    transform: translateX(-50%);
+    background-color: orange;
+    width: 150px;
+    height: 150px;
+    border-radius: 20px;
+    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.35);
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.card:hover .imgBox{
+    width: 250px;
+    height: 250px;
+}
+
+.imgBox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .content{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.card .content .details{
+    padding: 40px;
+    text-align: center;
+    width: 100%;
+    transition: 0.5s;
+    transform: translateY(150px);
+}
+
+.card:hover .content .details{
+    transform: translateY(0px);
+}
+
+.card .content .details h2{
+    font-size: 1.25em;
+    font-weight: 600;
+    color: #fff;
+    line-height: 1.2em;
+}
+
+.card .content .details h2 span{
+    font-size: 0.75em;
+    font-weight: 500;
+    opacity: 0.7;
+}
+
+.card .content .details .data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px 0px;
+}
+
+.card .content .details .data h3{
+    font-size: 1em;
+    color: #fff;
+    line-height: 1.2em;
+    font-weight: 600;
+}
+
+.card .content .details .data h3 span{
+    font-size: 0.85em;
+    font-weight: 400;
+    opacity: 0.8;
+}
+
+.card .content .details .actionButton{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card .content .details .actionButton button{
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    font-family: 500;
+    background-color: orange;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card .content .details .actionButton button:nth-child(2){
+    border: 1px solid orange;
+    background-color: gray;
+    color: #fff;
 }
